kubernetes/kubernetes/dex/dex_k8s_kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  namespace: sample-app-kub-namespace
  labels:
    kubequest: dex_k8s_kubernetes
  annotations:
    cert-manager.io/issuer: "dex-k8s-kubernetes-issuer"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx" 
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - dexfront.kubequest.net
    secretName: dex-k8s-kubernetes
  ingressClassName: nginx
  rules:
  - host: dexfront.kubequest.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app-service-clusterip
            port:
              number: 443
